styling fixes, empty space fix
Things I fixed:
no horizontal scrollbars should be present on goal list view
empty spaces bug should be fixed

things that need work: spacing of goals on mobile is too big

--- a/public/components/css/main.css
+++ b/public/components/css/main.css
@@ -7,11 +7,9 @@ h1, h2, h3, h4, a {
 }
 
 .container-fluid .bodycontainer{
-	margin-right: 5px;
-	padding-left:0px;
-	margin-left:0px;
-	padding-right: 0px;
-	padding-top:5px;
+	margin:0px;
+	padding:5px;
+	padding-top:0px;
 }
 /*customized a brighter shade of the 'text-muted' class/color for paragraphs for visiblity*/
 .text-grey {
